syntax = "proto3";
option java_multiple_files = true;
package org.onap.ccsdk.apps.controllerblueprints.common.api;

message CommonHeader {
  string timestamp = 1;
  string originatorId = 23;
  string requestId = 3;
  string subRequestId = 4;
  Flag flag = 5;
}

message Flag {
  bool isForce = 1;
  int32 ttl = 2;
}

message ActionIdentifiers {
  string blueprintName = 1;
  string blueprintVersion = 2;
  string actionName = 3;
  string mode = 4;
}

message Status {
  int32 code = 1;
  string errorMessage = 2;
  string message = 3;
  string eventType = 4;
  string timestamp = 5;
}